Initial support for texture compression
- Added `KTX-Software` & `Basis Universal` libraries
- Added support for generation of mips using CPU data
- Fixed `CalculateImageMemorySize` returning incorrect results if `bits < 8`
- Now `ContentBrowser` displays base mip of textures
- `TextureViewer` updates
- Enabled "Warnings as errors"

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -68,8 +68,8 @@ Size=979,751
 Collapsed=0
 
 [Window][Details]
-Pos=1288,60
-Size=275,783
+Pos=1455,178
+Size=438,783
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -89,7 +89,7 @@ Size=954,334
 Collapsed=0
 
 [Window][GPU Memory usage]
-Pos=748,534
+Pos=998,383
 Size=760,465
 Collapsed=0
 
@@ -105,23 +105,23 @@ Size=272,90
 Collapsed=0
 
 [Window][Eagle Editor]
-Pos=877,646
-Size=806,84
+Pos=1144,643
+Size=272,90
 Collapsed=0
 
 [Window][Material Editor]
-Pos=1339,123
+Pos=1360,825
 Size=614,515
 Collapsed=0
 
 [Window][Texture Editor]
-Pos=60,60
-Size=1226,783
+Pos=284,178
+Size=1169,783
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Physics Material Editor]
-Pos=399,238
+Pos=400,237
 Size=488,276
 Collapsed=0
 
@@ -141,13 +141,11 @@ Size=517,503
 Collapsed=0
 
 [Window][Project Selector]
-Pos=0,0
 Size=2560,1377
 Collapsed=0
 DockId=0xBA151C62,0
 
 [Window][Project_DockspaceWindow]
-Pos=0,0
 Size=2560,1377
 Collapsed=0
 
@@ -167,20 +165,40 @@ Pos=1144,630
 Size=272,117
 Collapsed=0
 
+[Window][Add asset]
+Pos=965,418
+Size=630,540
+Collapsed=0
+
+[Window][Import 2D texture]
+Pos=918,523
+Size=724,330
+Collapsed=0
+
+[Window][Import cube texture]
+Pos=920,560
+Size=720,256
+Collapsed=0
+
+[Window][Unsaved assets]
+Pos=920,408
+Size=720,560
+Collapsed=0
+
 [Docking][Data]
-DockNode          ID=0x0000000A Pos=60,83 Size=1503,783 Split=X
-  DockNode        ID=0x0000000B Parent=0x0000000A SizeRef=1226,310 Selected=0xA1271980
-  DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=275,310 Selected=0xFC3EA205
+DockNode          ID=0x0000000A Pos=284,201 Size=1609,783 Split=X
+  DockNode        ID=0x0000000B Parent=0x0000000A SizeRef=1169,310 Selected=0xA1271980
+  DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=438,310 Selected=0xFC3EA205
 DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=Y Selected=0x13926F0B
   DockNode        ID=0x0000000C Parent=0xB8CD5F20 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
   DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
     DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2132,1355 Split=Y Selected=0x13926F0B
       DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1008 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,303 Selected=0x49278EEE
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,303 Selected=0xBF096F38
     DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=426,1355 Split=Y Selected=0x2E9237F7
       DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,401 Selected=0x2E9237F7
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,910 Split=Y Selected=0x199AB496
         DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=395,605 Selected=0x199AB496
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,303 Selected=0x2E4EBCAA
-DockSpace         ID=0xBA151C62 Window=0xFDC19C07 Pos=0,23 Size=2560,1377 CentralNode=1 HiddenTabBar=1 Selected=0xF532CC21
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,303 Selected=0x0D3551B1
+DockSpace         ID=0xBA151C62 Pos=0,23 Size=2560,1377 CentralNode=1 HiddenTabBar=1 Selected=0xF532CC21
 
